src/test/ui/parser/macro/issue-33569.stderr
error: expected identifier, found `+`
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => { //~ ERROR expected identifier, found `+`
   |        ^

error: expected `*` or `+`
  --> $DIR/issue-33569.rs:4:13
   |
LL |         $(x)(y) //~ ERROR expected `*` or `+`
   |             ^^^

error: missing fragment specifier
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => { //~ ERROR expected identifier, found `+`
   |        ^

error: aborting due to 3 previous errors

